Add broswer event-loop demo

--- a/browser/examples/01-js-block-dom/JS-Script-block.html
+++ b/browser/examples/01-js-block-dom/JS-Script-block.html
@@ -12,9 +12,9 @@
       height: 100px;
     }
   </style>
-  <!-- <script defer src="../examples/JS阻塞1.js"></script> 异步执行  -->
-  <!-- <script async src="../examples/JS阻塞1.js"></script> 待 DOMContentLoaded 被触发 -->
-  <!-- <script src="../examples/JS阻塞1.js"></script> -->
+  <!-- <script defer src="../examples/js-block-1.js"></script> 异步执行  -->
+  <!-- <script async src="../examples/js-block-1.js"></script> 待 DOMContentLoaded 被触发 -->
+  <!-- <script src="../examples/js-block-1.js"></script> -->
    <script>
     // 尝试获取 container 元素
     var container = document.getElementById('container');
@@ -23,7 +23,7 @@
 </head>
 <body>
   <div id="container"></div>
-  <!-- <script src="../examples/JS阻塞2.js"></script> -->
+  <!-- <script src="../examples/js-block-2.js"></script> -->
   <script>
     // 尝试获取 container 元素
     var container = document.getElementById('container');
