--- a/browser/examples/03-concurrency-event-loop/03-macrotask-dispatch-click.html
+++ b/browser/examples/03-concurrency-event-loop/03-macrotask-dispatch-click.html
@@ -27,29 +27,30 @@
     <div class="inner"></div>
   </div>
   <script>
-    const outer = document.querySelector('.outer');
-    const inner = document.querySelector('.inner')
-
+    var outer = document.querySelector('.outer');
+    var inner = document.querySelector('.inner')
+  
     // 单击事件
     function onClick() {
       debugger;
       console.log('click');
 
       setTimeout(() => {
+        var container = document.getElementById('container');
+        console.log('container :', container); // 执行第二次 macroTask 已经进行渲染了。
         console.log('timeout')
       }, 0);
 
       Promise.resolve().then(function() {
         console.log('promise');
         // dom 操作
-        inner.style.backgroundColor = "red";
+        // inner.style.backgroundColor = "red";
       })
     }
 
     // 绑定事件
     inner.addEventListener('click', onClick);
     outer.addEventListener('click', onClick);
-    // 
   </script>
 </body>
 </html>
