添加ajax 跨域请求例子

--- a/es6/examples/index.html
+++ b/es6/examples/index.html
@@ -22,43 +22,43 @@
             <section class="card">
               <div class="card-header">
                 <h2 class="mb-0">
-                  03-concurrency-event-loop
+                  control object access
                 </h2>
               </div>
               <ul class="nav flex-column">
                 <li class="nav-item">
                   <a
                     class="nav-link"
-                    href="../examples/03-concurrency-event-loop/01-solution-async-callback.html"
-                    >01-solution-async-callback</a
+                    href="../examples/01-control-object-access/defineProperty/DefineProperty.html"
+                  >defineProperty——DefineProperty</a
                   >
                 </li>
                 <li class="nav-item">
                   <a
                     class="nav-link"
-                    href="../examples/03-concurrency-event-loop/02-microtask-macrotask.html"
-                    >02-microtask-macrotask</a
+                    href="../examples/01-control-object-access/defineProperty/Setters-getters.html"
+                  >defineProperty——Setters-getters</a
                   >
                 </li>
                 <li class="nav-item">
                   <a
                     class="nav-link"
-                    href="../examples/03-concurrency-event-loop/03-macrotask-dispatch-click.html"
-                    >03-macrotask-dispatch-click</a
+                    href="../examples/01-control-object-access/defineProperty/watch-data-render-dom.html"
+                    >defineProperty——watch-data-render-dom</a
                   >
                 </li>
                 <li class="nav-item">
                   <a
                     class="nav-link"
-                    href="../examples/03-concurrency-event-loop/04-microtask-mutationObserver.html"
-                    >04-microtask-mutationObserver</a
+                    href="../examples/01-control-object-access/proxy/Proxy.html"
+                  >Proxy——Start</a
                   >
                 </li>
                 <li class="nav-item">
                   <a
                     class="nav-link"
-                    href="../examples/03-concurrency-event-loop/05-task-render-task.html"
-                    >05-task-render-task</a
+                    href="../examples/01-control-object-access/proxy/Watch-data-render-dom.html"
+                  >Proxy——Watch-data-render-dom</a
                   >
                 </li>
               </ul>
