添加异步 Promise demodemo

--- a/browser/examples/03-concurrency-event-loop/02-microtask-macrotask.html
+++ b/browser/examples/03-concurrency-event-loop/02-microtask-macrotask.html
@@ -20,6 +20,10 @@
       console.log('promise2');
     });
 
+    (async function() {
+      await 
+    })();
+
     console.log('script end');
   </script>
 </body>
